# adventofcode2025

./: .gitignore  Cargo.toml  run.sh
benches/: bench.rs
js/: lib.mjs
js/2025-01/: index.mjs
js/2025-02/: index.mjs
js/2025-03/: index.mjs
js/2025-04/: index.mjs
js/2025-05/: index.mjs
js/2025-06/: index.mjs
js/2025-07/: index.mjs
js/2025-08/: index.mjs
js/2025-09/: Makefile  index.mjs
js/2025-10/: index.mjs  part2.py
js/2025-11/: index.mjs
js/2025-12/: Makefile  index.mjs
js/template/: index.mjs
src/: day1.rs  day10.rs  lib.rs
