[package]
name = "solution"
version = "0.1.0"
edition = "2021"

[dependencies]

[dev-dependencies]
criterion = { version = "4.1.0", package = "codspeed-criterion-compat" }
paste = "1.0.15"

[profile.release]
codegen-units = 1
panic = "abort"
lto = true

[profile.dev.build-override]
opt-level = 3

[[bench]]
name = "bench"
harness = false
